--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,74 @@
+/* NAV SECTION */
 .navLink {
   color: black;
   font-size: 1rem;
 }
 
-a.navList.active{
-    color: red;
-      text-decoration: none;
-      font-size: 2rem;
-
+a.navList.active {
+  color: red;
+  text-decoration: none;
+  font-size: 2rem;
 }
 
+.mainNav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-view {
+  display: none;
+}
+
+
+
+@media screen and (max-width: 570px) {
+
+  .mainNav {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+  .desktop-view {
+    display: none;
+  }
+
+  .mobile-view {
+    display: flex;
+  }
+  .navLink{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  h1{
+    position: relative;
+    top: 0rem;
+
+}
+}
+
+
+/* Home Page */
+
+.api-div{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0rem 2rem 2rem 0rem;
+  justify-content: space-between;
+}
+
+.fake-api{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+.search{
+  width: 300px;
+  padding: 6px;
+}
