--- a/src/App.css
+++ b/src/App.css
@@ -20,18 +20,52 @@ a.navList.active {
   display: none;
 }
 
-
-
 @media screen and (max-width: 570px) {
-
   .mainNav {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 
   .desktop-view {
     display: none;
   }
+}
 
+.img-logo {
+  width: 50px;
+  height: 50px;
+  object-fit: fill;
+  border-radius: 10px;
+}
+
+.mobile-view {
+  display: none;
+}
+.openIcon {
+  display: none;
+}
+
+@media screen and (max-width: 570px) {
+  .mainNav {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .desktop-view {
+    display: none;
+  }
+  .mobile-view {
+    display: flex;
+  }
+
+  .navLink {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .openIcon {
+    display: flex;
+  }
 }
